--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
   </head>
-
   <body>
     <section class="section">
       <div id="big-bean-energy" class="container">
@@ -60,8 +59,52 @@
           beanDropdown.selectedIndex;
       }
     </script>
-  </body>
   sarah's button 
+    <section class="section">
+      <div id="puppups" class="container">
+        <span class="tag is-primary" onclick="puppups()">pups</span>
+        <div class="field">
+          <div class="control">
+            <div class="select is-primary">
+              <select id="puppups-dropdown">
+                <option>pup</option>
+                <option>PUPS</option>
+                <option>puppup</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <br />
+      </div>
+    </section>
+    <script>
+      function Puppups() {
+        let numOfpups;
+        let pupDropdown = document.getElementById("pup-dropdown");
+        let pupValue = pupDropdown.options[pupDropdown.selectedIndex].value;
+
+        if (pupValue === "pup") {
+          numOfpups = 8;
+        } else if (pupValue === "PUPS") {
+          numOfpups = 16;
+        } else if (pupValue === "puppup") {
+          numOfpups = 1;
+        } else {
+        }
+
+        for (let i = 0; i < numOfBeans; i++) {
+          document.getElementById(
+            "puppup-energy"
+          ).innerHTML += `<span class="tag is-primary">pup</span>`;
+        }
+
+        document.getElementById("puppup-dropdown").selectedIndex =
+          pupDropdown.selectedIndex;
+      }
+    </script>
+  </body>
+</html>
+sarah's button 
   <body>
     <section class="section">
       <div id="puppups" class="container">
@@ -98,7 +141,7 @@
           // numOfBeans = 3; // some default "else" options
         }
 
-        for (let i = 0; i < numOfBeans; i++) {
+        for (let i = 0; i < numOfpups; i++) {
           document.getElementById(
             "puppup-energy"
           ).innerHTML += `<span class="tag is-primary">pup</span>`;
@@ -110,4 +153,3 @@
     </script>
   </body>
 </html>
-
